--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12 col-md-6">
-                            <div class="border border-white shadow m-2">
+                            <div class="about-item shadow m-2 border border-white">
                                 <div class="row">
                                     <div class="col-sm-12 text-center"><img src="images/about.png" alt="about" style="height: 8rem; width: 8rem"></div>
-                                    <div class="col-sm-12 fw-bold text-center"><h1>ABOUT</h1></div>
+                                    <div class="col-sm-12 fw-bold text-center"><h1>About</h1></div>
                                     <div class="col-sm-12 p-4"><p class="text-center">After completing my high school education in 2019,
                                         I pursued my passion and curiosity in the field of computer science,
                                         successfully earning my associate degree in Computer Programming in 2021.<br>
@@ -102,10 +102,12 @@
                             </div>
                         </div>
                         <div class="col-sm-12 col-md-6 align-items-center d-flex">
-                            <div class="border border-white shadow m-2">
+                            <div class="information-item shadow m-2 border border-white">
                                 <div class="row">
-                                    <div class="col-sm-12 text-center"><img src="images/information.png" alt="information" style="height: 8rem; width: 8rem"></div>
-                                    <div class="col-sm-12 fw-bold text-center"><h1>BASIC INFORMATION</h1></div>
+                                    <div class="col-sm-12 text-center">
+                                      <img src="images/information.png" alt="information" style="height: 8rem; width: 8rem; transition-duration: 500ms;" >
+                                    </div>
+                                    <div class="col-sm-12 fw-bold text-center"><h1>Basic Information</h1></div>
                                     <div class="col-sm-12 d-flex p-4 align-items-center justify-content-center">
                                         <div class="row">
                                             <div class="col-sm-6 text-end"><p class="bip">Birthday :</p></div>
@@ -302,7 +304,7 @@
               <div class="row">
 
               <div class="logo col-sm-12 col-md-6 d-flex align-items-center justify-content-center">
-                <img src="images/email.png" alt="email" style="max-width: 350px; max-height: 350px;" >
+                <img src="images/email.png" alt="email" style="max-width: 300px; max-height: 300px;" >
               </div>
 
               <div class="form col-sm-12 col-md-6 d-flex align-items-center justify-content-center">
@@ -325,7 +327,7 @@
                       <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Message"></textarea>
                     </div>
                     
-                    <button type="submit" class="btn btn-primary rounded-pill">Submit</button>
+                    <div class="col-sm-12 p-2 textshad"><button type="button" class="btn btn-outline-light">Submit</button></div>
 
                   </div>
               </div>    
