--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
                         <div class="col-sm-12 col-md-6">
                             <div class="about-item shadow m-2 border border-white">
                                 <div class="row">
-                                    <div class="col-sm-12 text-center"><img src="images/about.png" alt="about" style="height: 8rem; width: 8rem"></div>
+                                    <div class="col-sm-12 text-center">
+                                      <img src="images/about.png" alt="about" style="height: 8rem; width: 8rem">
+                                    </div>
                                     <div class="col-sm-12 fw-bold text-center"><h1>About</h1></div>
                                     <div class="col-sm-12 p-4"><p class="text-center">After completing my high school education in 2019,
                                         I pursued my passion and curiosity in the field of computer science,
@@ -110,14 +112,10 @@
                                     <div class="col-sm-12 fw-bold text-center"><h1>Basic Information</h1></div>
                                     <div class="col-sm-12 d-flex p-4 align-items-center justify-content-center">
                                         <div class="row">
-                                            <div class="col-sm-6 text-end"><p class="bip">Birthday :</p></div>
-                                            <div class="col-sm-6 text-start"><p>19.11.2001</p></div>
-                                            <div class="col-sm-6 text-end"><p class="bip">E-mail :</p></div>
-                                            <div class="col-sm-6 text-start"><p>enssyilmzx@gmail.com</p></div>
-                                            <div class="col-sm-6 text-end"><p class="bip">Phone :</p></div>
-                                            <div class="col-sm-6 text-start"><p>+90 538 913 76 70</p></div>
-                                            <div class="col-sm-6 text-end"><p class="bip">City :</p></div>
-                                            <div class="col-sm-6 text-start"><p>Ordu/Turkey</p></div>
+                                            <div class="col-sm-12 d-flex justify-content-center"><p class="bip">Birthday&nbsp;:&nbsp;</p><p>19.11.2001</p></div>
+                                            <div class="col-sm-12 d-flex justify-content-center"><p class="bip">E-mail&nbsp;:&nbsp;</p><p>enssyilmzx@gmail.com</p></div>
+                                            <div class="col-sm-12 d-flex justify-content-center"><p class="bip">Phone&nbsp;:&nbsp;</p><p>+90 538 913 76 70</p></div>
+                                            <div class="col-sm-12 d-flex justify-content-center"><p class="bip">City/Country&nbsp;:&nbsp;</p><p>Ordu/Turkey</p></div>
                                         </div>
                                     </div>
                                 </div>
@@ -134,12 +132,30 @@
             <div class="row">
               <div class="keal col-sm-12 col-md-4 border">
                 <h1 class="text-center border shadow fw-bold">Kumru Ercallar Anatolian Highschool</h1>
+                <p class="text-center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae qui soluta adipisci quo ducimus temporibus eos distinctio, voluptas veritatis aliquid doloribus ex similique! Dicta consectetur error nostrum tenetur, necessitatibus iusto.
+                  Facere, nesciunt? Iste molestias odit dignissimos maiores beatae quod ut sunt laboriosam tempore laudantium ipsum fuga, consequuntur, sit exercitationem perferendis velit ipsam sapiente optio? Nihil excepturi fuga rem perferendis error!
+                  Repellendus animi voluptatem culpa ratione quidem, quia amet delectus optio magni incidunt corporis similique illo magnam sit harum, aut officiis labore facilis, beatae sapiente obcaecati consectetur iure exercitationem. Doloremque, minus?
+                  Velit iusto necessitatibus nulla rem dolores aperiam eligendi quia reprehenderit aliquam rerum saepe consequuntur adipisci deleniti, reiciendis, aut blanditiis cum nostrum ratione. Provident sunt hic neque ipsum ipsam sapiente vero.
+                  Omnis fuga tenetur cumque placeat blanditiis rerum quisquam inventore a odio porro voluptatum iusto pariatur veniam, aut eaque quibusdam provident totam unde, harum magni animi incidunt amet ex. Dolore, dolorum.
+                </p>
               </div>
               <div class="ktu col-sm-12 col-md-4 border">
                 <h1 class="text-center border shadow fw-bold">Karadeniz Technical University</h1>
+                <p class="text-center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae qui soluta adipisci quo ducimus temporibus eos distinctio, voluptas veritatis aliquid doloribus ex similique! Dicta consectetur error nostrum tenetur, necessitatibus iusto.
+                Facere, nesciunt? Iste molestias odit dignissimos maiores beatae quod ut sunt laboriosam tempore laudantium ipsum fuga, consequuntur, sit exercitationem perferendis velit ipsam sapiente optio? Nihil excepturi fuga rem perferendis error!
+                Repellendus animi voluptatem culpa ratione quidem, quia amet delectus optio magni incidunt corporis similique illo magnam sit harum, aut officiis labore facilis, beatae sapiente obcaecati consectetur iure exercitationem. Doloremque, minus?
+                Velit iusto necessitatibus nulla rem dolores aperiam eligendi quia reprehenderit aliquam rerum saepe consequuntur adipisci deleniti, reiciendis, aut blanditiis cum nostrum ratione. Provident sunt hic neque ipsum ipsam sapiente vero.
+                Omnis fuga tenetur cumque placeat blanditiis rerum quisquam inventore a odio porro voluptatum iusto pariatur veniam, aut eaque quibusdam provident totam unde, harum magni animi incidunt amet ex. Dolore, dolorum.
+              </p>
               </div>
               <div class="zbeu col-sm-12 col-md-4 border">
                 <h1 class="text-center border shadow fw-bold">Zonguldak Bülent Ecevit University</h1>
+                <p class="text-center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae qui soluta adipisci quo ducimus temporibus eos distinctio, voluptas veritatis aliquid doloribus ex similique! Dicta consectetur error nostrum tenetur, necessitatibus iusto.
+                  Facere, nesciunt? Iste molestias odit dignissimos maiores beatae quod ut sunt laboriosam tempore laudantium ipsum fuga, consequuntur, sit exercitationem perferendis velit ipsam sapiente optio? Nihil excepturi fuga rem perferendis error!
+                  Repellendus animi voluptatem culpa ratione quidem, quia amet delectus optio magni incidunt corporis similique illo magnam sit harum, aut officiis labore facilis, beatae sapiente obcaecati consectetur iure exercitationem. Doloremque, minus?
+                  Velit iusto necessitatibus nulla rem dolores aperiam eligendi quia reprehenderit aliquam rerum saepe consequuntur adipisci deleniti, reiciendis, aut blanditiis cum nostrum ratione. Provident sunt hic neque ipsum ipsam sapiente vero.
+                  Omnis fuga tenetur cumque placeat blanditiis rerum quisquam inventore a odio porro voluptatum iusto pariatur veniam, aut eaque quibusdam provident totam unde, harum magni animi incidunt amet ex. Dolore, dolorum.
+                </p>
               </div>
             </div>
           </div>
