--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@
             </div>
           </div>
           <a name="contact"></a>
-          <div class="about container-fluid text-light bg-dark d-flex align-items-center center" style="min-height: 100vh">
-            <div class="about container text-light bg-dark d-flex text-center" style="min-height: 100vh">
+          <div class="contact container-fluid text-light bg-dark d-flex align-items-center center" style="min-height: 100vh">
+            <div class="contact container text-light bg-dark d-flex text-center" style="min-height: 100vh">
               <div class="row">
 
               <div class="logo col-sm-12 col-md-6 d-flex align-items-center justify-content-center">
