--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="row">
                 <div class="col-sm-12 p-2"><img src="/images/photo.jpg" class="img-thumbnail" alt="Image" style="width: 200px; height: 200px; object-fit: cover;"></div>
                 <div class="col-sm-12 text-light textshad"><h1>Enes YILMAZ</h1></div>
-                <div class="col-sm-12 text-light textshad"><h6>Front-end Developer</h6></div>
+                <div class="col-sm-12 text-light textshad"><h6>Full Stack Developer</h6></div>
                 <div class="col-sm-12 d-flex align-items-center justify-content-center">
                   <div class="row">
                     <div class="col-sm-4"><a href="https://www.instagram.com/enssyilmz">
